Changelog
=========

1.4 (unreleased)
----------------

- Added IGeoCoder utility [gborelli]
- Marked as deprecated IGeoCoder adapter [gborelli]
- Added removeGeoInterface to remove coordinates
    from an object [gborelli, mircoangelini]


0.1.3 (2011-09-05)
------------------
- plone 4.1 fixes [gborelli]
- include Products.CMFCore to make plone 4.1 happy [nan010]
- changed Browser import from Testing.testbrowser [gborelli]
- added z3c.autoinclude entry point [gborelli]


0.1.2 (2010-12-28)
------------------

- Moved IGeoView from c.geo.contentlocations


0.1.1 (2010-11-13)
------------------

- moved geocoderview to portal root


0.1 (2010-10-31)
----------------

* removed zgeo.geographer dependency
* zgeo.plone.geographer code refactoring
* moved from zgeo.plone.geographer